CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(tinyrfb)

INCLUDE(CheckCCompilerFlag)

CHECK_C_COMPILER_FLAG("-W -Wall" CWARNS)
IF(CWARNS)
	ADD_COMPILE_OPTIONS(-W -Wall)
ENDIF()

CHECK_C_COMPILER_FLAG("-Wno-unused-paramete" CWARNS_E)
IF(CWARNS_E)
	ADD_COMPILE_OPTIONS("-Wno-unused-parameter")
ENDIF()

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(test)
ADD_SUBDIRECTORY(libwebcam)
ADD_SUBDIRECTORY(rfbcam)

