INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/src")
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/libwebcam")

CHECK_INCLUDE_FILES(jpeglib.h HAVE_JPEGLIB_H)
IF(HAVE_JPEGLIB_H)
	ADD_DEFINITIONS(-DHAVE_JPEGLIB_H=1)
	SET(LIBJPEG jpeg)
ELSE()
	SET(LIBJPEG)
ENDIF()

ADD_EXECUTABLE(trfb_test trfbtest.c)
TARGET_LINK_LIBRARIES(trfb_test trfb pthread)

ADD_EXECUTABLE(webcam_jpeg test_jpeg.c)
TARGET_LINK_LIBRARIES(webcam_jpeg ${LIBJPEG} webcam ${LIBWEBCAM_LIBS})

